@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #334155
  ArrowColor #475569
}
skinparam interface {
  BackgroundColor #EFF6FF
  BorderColor #2563EB
}
title SimpleRAG - Strategy 模式（多格式文档读取）
left to right direction

class DocumentReaderRegistry <<Context>> {
  -byExtension : Map<String, DocumentReader>
  -byFileName : Map<String, DocumentReader>
  +read(file : Path, root : Path) : ReadDocument
  +canRead(path : Path, size : long) : boolean
}

interface DocumentReader <<Strategy>> {
  +id() : String
  +version() : int
  +extensions() : Set<String>
  +fileNames() : Set<String>
  +maxFileSizeBytes() : long
  +read(file : Path, root : Path) : ReadDocument
}

class PlainTextDocumentReader <<Concrete Strategy>>
class PdfDocumentReader <<Concrete Strategy>>
class DocxDocumentReader <<Concrete Strategy>>
class PptxDocumentReader <<Concrete Strategy>>
class XlsxDocumentReader <<Concrete Strategy>>
class HtmlDocumentReader <<Concrete Strategy>>

class ReadDocument <<Strategy Result>> {
  +path : Path
  +root : Path
  +documentId : String
  +extension : String
  +sections : List<DocumentSection>
  +readerId : String
  +readerVersion : int
  +warnings : List<String>
}

DocumentReaderRegistry "1" o-- "1..*" DocumentReader : configured strategies
PlainTextDocumentReader ..|> DocumentReader
PdfDocumentReader ..|> DocumentReader
DocxDocumentReader ..|> DocumentReader
PptxDocumentReader ..|> DocumentReader
XlsxDocumentReader ..|> DocumentReader
HtmlDocumentReader ..|> DocumentReader
DocumentReader ..> ReadDocument : returns
@enduml
